# color-rs

./: .gitattributes  .gitignore  Cargo.toml  Readme.md
projects/code-span/: Cargo.toml
projects/code-span/src/: lib.rs
projects/code-span/src/palette/: der.rs  mod.rs  ser.rs
projects/code-span/src/view/: der.rs  iter.rs  mod.rs  ser.rs
projects/code-span/src/writer/html/: html_fmt.rs  mod.rs  one-dark.css
projects/code-span/tests/: keyword.html  keyword.json  main.rs
projects/color/: Cargo.toml
projects/color-ansi/: Cargo.toml  readme.md
projects/color-ansi/src/: lib.rs
projects/color-ansi/src/ansi/: mod.rs
projects/color-ansi/src/writer/: mod.rs
projects/color-ansi/tests/: main.rs
projects/color-char/: Cargo.toml  readme.md
projects/color-char/src/: lib.rs
projects/color-char/src/character/: arith.rs  convert.rs  der.rs  display.rs  mod.rs  ser.rs
projects/color-char/tests/: main.rs
projects/color-core/: Cargo.toml  package.json  readme.md
projects/color-core/src/: katex.html  lib.rs
projects/color-core/src/cmyk/: mod.rs
projects/color-core/src/cmyk/cmyk32/: traits.rs
projects/color-core/src/hsl/: convert.rs  mod.rs
projects/color-core/src/hsl/hsla32/: convert.rs  display.rs  mod.rs  traits.rs
projects/color-core/src/hsv/: display.rs  mod.rs
projects/color-core/src/hsv/hsva32/: convert.rs  hsva32_to_rgba32.tex  mod.rs  rgba32_to_hsva32.tex
projects/color-core/src/lch/: mod.rs
projects/color-core/src/lch/lcha32/: mod.rs  traits.rs
projects/color-core/src/luma/: mod.rs
projects/color-core/src/luma/luma32/: mod.rs  traits.rs
projects/color-core/src/rgb/: convert.rs  display.rs  mod.rs
projects/color-core/src/rgb/rgb/: convert.rs  display.rs  mod.rs  named_colors.m  named_colors.rs  traits.rs
projects/color-core/src/rgb/rgba/: convert.rs  display.rs  mod.rs  traits.rs
projects/color-core/src/rgb/rgba32/: convert.rs  display.rs  mod.rs  traits.rs
projects/color-core/src/utils/random/: mod.rs
projects/color-core/tests/: main.rs
projects/color-core/tests/hsl/: mod.rs
projects/color-core/tests/hsv/: mod.rs
projects/color-core/tests/rgb/: mod.rs
projects/color-gradient/: Cargo.toml
projects/color-gradient/src/: lib.rs
projects/color-gradient/src/blenders/: mod.rs
projects/color-gradient/src/blenders/gamma/: mod.rs
projects/color-gradient/src/blenders/hsv/: builtin.rs  mod.rs
projects/color-gradient/src/blenders/linear/: mod.rs
projects/color-gradient/src/blenders/rgb/: mod.rs
projects/color-gradient/src/blenders/scatter/: mod.rs
projects/color-gradient/src/builtin/: mod.rs
projects/color-gradient/src/helpers/: mod.rs
projects/color-gradient/src/helpers/sampler/: mod.rs
projects/color-gradient/src/interpolation/: mod.rs
projects/color-gradient/src/linear/: mod.rs
projects/color-gradient/src/palette/: mod.rs
projects/color-gradient/src/palettes/: mod.rs
projects/color-gradient/src/palettes/discrete/: mod.rs
projects/color-gradient/src/traits/: mod.rs
projects/color-gradient/src/utils/: mod.rs
projects/color-gradient/src/utils/sampler/: mod.rs
projects/color-gradient/tests/: main.rs
projects/color-gradient/tests/hsv/: mod.rs
projects/color-macro/: Cargo.toml
projects/color-macro/src/: lib.rs
projects/color-macro/src/parsing/: mod.rs  rgba.rs
projects/color-macro/src/rgb/: mod.rs
projects/color-macro/tests/: main.rs
projects/color-parser/: Cargo.toml
projects/color-parser/src/: lib.rs
projects/color-parser/src/color/: mod.rs  predefined.rs
projects/color-parser/src/hex/: mod.rs
projects/color-parser/src/number/: mod.rs
projects/color-parser/src/utils/: mod.rs
projects/color-parser/tests/: main.rs  readme.md
projects/color-span/: Cargo.toml
projects/color-span/src/: errors.rs  lib.rs
projects/color-span/src/hsl/hsva32/: mod.rs
projects/color-span/src/palette/: iter.rs  mod.rs
projects/color-span/src/span/: mod.rs
projects/color-span/src/utils/: mod.rs
projects/color-span/src/view/: convert.rs  der.rs  html.rs  iter.rs  mod.rs  ser.rs
projects/color-span/src/view/hsla32/: traits.rs
projects/color-span/src/writer/: html_fmt.rs  mod.rs
projects/color-span/src/writer/html/: html_fmt.rs  one-dark.css
projects/color-span/tests/: keyword.html  keyword.json  main.rs
projects/color/src/: lib.rs
projects/color/src/hsl/: convert.rs  display.rs  mod.rs
projects/color/src/hsl/hsla32/: mod.rs
projects/color/src/luma/: mod.rs
projects/color/src/luma/luma32/: mod.rs
projects/color/src/rgb/: convert.rs  display.rs  mod.rs  named_colors.rs
projects/color/src/rgb/rgb/: convert.rs  display.rs  mod.rs  named_colors.json  named_colors.m  named_colors.rs
projects/color/src/rgb/rgba/: convert.rs  display.rs  mod.rs
projects/color/src/rgb/rgba32/: display.rs  mod.rs
projects/color/tests/: main.rs
projects/float01/: Cargo.toml
projects/float01/src/: lib.rs
projects/float01/src/float32/: arith.rs  convert.rs  der.rs  display.rs  mod.rs  num.rs  ser.rs
