[package]
name = "color-ansi"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Css color level3 parser"
repository = "https://github.com/oovm/color-rs"
documentation = "https://docs.rs/color-parser"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.json"]

[dependencies]


[features]
default = []


[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
