[package]
name = "color-ansi"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Lightweight terminal color writer"
repository = "https://github.com/oovm/color-rs"
documentation = "https://docs.rs/color-ansi"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.json"]

[dependencies]


[features]
default = []


[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
