[package]
name = "color-core"
version = "0.1.6"
authors = ["Aster <192607617@qq.com>"]
description = "Color shared definition"
repository = "https://github.com/oovm/color-rs/tree/dev/projects/color-core"
documentation = "https://docs.rs/color-core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.json", "tests/"]

[dependencies]
serde = { version = "1.0.160", optional = true, features = ["derive"] }
rand = { version = "0.8.5", optional = true }

[features]
default = []


[package.metadata.docs.rs]
all-features = true