[package]
name = "color-gradient"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "color-gradient"
repository = "https://github.com/oovm/color-rs"
documentation = "https://docs.rs/color-gradient"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.json"]

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.158", optional = true }
svg = { version = "0.13.1", optional = true }

[dependencies.float01]
version = "0.0.0"
path = "../float01"

[dependencies.color-core]
version = "0.1.0"
path = "../color-core"




[features]
default = ["serde", "svg"]
serde = ["dep:serde", "float01/serde"]
strict = [

]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
