[package]
name = "colormap"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Color gradient and color interpolation"
repository = "https://github.com/oovm/color-rs"
documentation = "https://docs.rs/color-gradient"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.json", "assets/", "tests"]

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.158", optional = true }
rand = { version = "0.8.5", optional = true }
svg = { version = "0.13.1", optional = true }
image = { version = "0.24.6", optional = true  }

[dependencies.color-core]
version = "0.1.4"
path = "../color-core"

[dev-dependencies]
image = "0.24.6"

[features]
default = ["image"]
serde = ["dep:serde"]
rand = ["dep:rand", "color-core/rand"]
strict = [

]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
