[package]
name = "color-macro"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Css color parser at compile time"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/color-macro"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.json"]

[lib]
proc-macro = true

[features]
default = []
strict = ["color-parser/strict"]

[dependencies]
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full", "extra-traits"] }
color-parser = { version = "0.1.0", path = "../color-parser" }

[dev-dependencies]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
