[package]
name = "color-parser"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Css color level3 parser"
repository = "https://github.com/oovm/color-rs"
documentation = "https://docs.rs/color-parser"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.json"]

[dependencies]
color-core = {version="0.1.0", path = "../color-core"}
nom = "7.1.0"

[features]
default = []
strict = ["color-core/strict"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
