[package]
name = "color-span"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Color shared definition"
repository = "https://github.com/oovm/color-rs"
documentation = "https://docs.rs/color-span"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.json"]

[dependencies]
indexmap = "1.9.2"
serde = "1.0.147"

[features]
default = []
