[package]
name = "color-span"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Color shared definition"
repository = "https://github.com/oovm/color-rs"
documentation = "https://docs.rs/color-span"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.json"]

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.147", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.89"

[features]
default = []
