[package]
name = "color"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Css color parser at compile time"
repository = "https://github.com/oovm/tailwind-rs"
documentation = "https://docs.rs/const-css-color"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.json"]

[dependencies]
color-core = { version = "0.1.0", path = "../color-core" }
color-macro = { version = "0.1.0", path = "../color-macro" }

[features]
default = []
strict = [
    "color-core/strict",
    "color-macro/strict"
]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
